--- a/flask_admin/templates/bootstrap3/admin/lib.html
+++ b/flask_admin/templates/bootstrap3/admin/lib.html
@@ -212,9 +212,6 @@
   {% if config.MAPBOX_MAP_ID %}
   <link href="{{ admin_static.url(filename='vendor/leaflet/leaflet.css', v='1.0.0') }}" rel="stylesheet">
   <link href="{{ admin_static.url(filename='vendor/leaflet/leaflet.draw.css', v='0.3.2') }}" rel="stylesheet">
-  {% if config.MAPBOX_SEARCH %}
-  <link href="{{ admin_static.url(filename='vendor/leaflet/leaflet.search.css', v='2.7.0') }}" rel="stylesheet">
-  {% endif %}
   {% endif %}
   {% if editable_columns %}
   <link href="{{ admin_static.url(filename='vendor/x-editable/css/bootstrap3-editable.css', v='1.5.1.1') }}" rel="stylesheet">
@@ -232,8 +229,10 @@
   <script src="{{ admin_static.url(filename='vendor/leaflet/leaflet.js', v='1.0.0') }}"></script>
   <script src="{{ admin_static.url(filename='vendor/leaflet/leaflet.draw.js', v='0.3.2') }}"></script>
   {% if config.MAPBOX_SEARCH %}
-  <script src="https://maps.googleapis.com/maps/api/js?v=3&sensor=false"></script>
-  <script src="{{ admin_static.url(filename='vendor/leaflet/leaflet.search.js', v='2.7.0') }}"></script>
+  <script>
+  window.MAPBOX_SEARCH = "{{ config.MAPBOX_SEARCH }}";
+  </script>
+  <script src="https://maps.googleapis.com/maps/api/js?v=3&libraries=places&key={{ config.get('GOOGLE_MAPS_API_KEY') }}"></script>
   {% endif %}
   {% endif %}
   <script src="{{ admin_static.url(filename='vendor/bootstrap-daterangepicker/daterangepicker.js', v='1.3.22') }}"></script>
